adding todo functionality

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <body>
 <div class="wrapper">
 	<div class="input-wrapper">	
-		<input type="text" name="input" />
-		<button type="submit" class="submit">Add +</button>
+		<form action="" class="form">
+			<input type="text" name="input" class="input-text"/>
+		</form>
 	</div>
-
+	<div class="todolist-wrapper">
+		<ul class="todolist">
+			
+		</ul>
+	</div>
 </div>
 
 <script type="text/javascript" src="main.js"></script>
